@@ -256,4 +256,5 @@ vendor/unitedlinux/oracleasm.init
 vendor/unitedlinux/oracleasm-2.4.19-4GB-304.spec
 vendor/unitedlinux/oracleasm-2.4.19-4GB-SMP-304.spec
 vendor/unitedlinux/oracleasm-2.4.19-64GB-SMP-304.spec
+vendor/unitedlinux/oracleasm-2.4.21-111.spec
 ])
